Fix : Remove 'assert' from gxccman.c .

DETAILS :

Bug 688422 "Assertion failed! in gxccman.c".

It doesn't fix the bug, but avoids harmful effects,
which 'assert' implementation causes on some embedded systems.
The assertion in gsccman.c failed too frequently during last 2 years.

EXPECTED DIFFERENCES :

None.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@6210 a1074d23-0009-0410-80fe-cf8c14f379e6